# Havk

./: .clang-format  .gitignore  CMakeLists.txt  README.md
samples/: CMakeLists.txt  GpuDrivenRendering.cpp  HelloCompute.cpp  HelloTriangle.cpp  MinimalTriangle.cpp  Model.cpp  Model.h  ShadebugDemo.cpp  StbImage.cpp
samples/Shaders/: HelloCompute.slang  HelloTriangle.slang  ModelRender.slang  ShadebugDemo.slang
src/: CMakeLists.txt  TargetShaderSources.cmake
src/Havk/: Havk.cpp  Havk.h  ShaderBridge.h  ShaderBuildTool.cpp  ShaderReload.h
src/Havx/: Camera.h  ImGuiRenderer.h  MainWindow.h  PerfMonitor.cpp  PerfMonitor.h  ShaderDebugTools.cpp  ShaderDebugTools.h  SystemUtils.cpp  SystemUtils.h  Yson.cpp  Yson.h
src/Shaders/Havk/: ColorUtils.slang  Core.slang  DataPacking.slang  DebugTools.slang  DebugTools.slangh  DrawImGui.slang  FullscreenTriangle.slang  Math.slang
tests/: CMakeLists.txt  DataIOTests.cpp  YsonTests.cpp
